# trayicon

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
app/: CMakeLists.txt  main.cpp
cmake/: Install.cmake  Version.cmake
examples/windows/kmonad/: README.md
include/: app.hpp  cli.hpp  exceptions.hpp  gui.hpp  signal_handlers.hpp  trayicon.hpp  trayiconapp.hpp
resources/: resources.qrc
scripts/: build-qt  build-qt.ps1  configure  configure.ps1  download-installer.ps1  download-qt  download-qt.ps1  launch.ps1  launch.vbs  launch_dev_shell.ps1  setup  setup.ps1  setup_env.ps1  trayicon
scripts/apt/: install-project-deps
src/: CMakeLists.txt  app.cpp  cli.cpp  exceptions.cpp  gui.cpp  signal_handlers.cpp  trayicon.cpp  trayiconapp.cpp
